--- a/Wordcounter.html
+++ b/Wordcounter.html
@@ -5,40 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Counter</title>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            padding: 45px 100px;
-        }
-
-        h1 {
-            text-align: center;
-            background-color: #0067B0;
-            color: white;
-            padding: 10px;
-        }
-
-        #textbox {
-            margin: 20px;
-            width: 97%;
-            border: 2px solid #0067B0;
-        }
-
-        p {
-            text-align: center;
-            background-color: #0067B0;
-            font-size: 25px;
-            font-weight: bold;
-            padding: 10px;
-            color: white;
-        }
-    </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -60,10 +27,10 @@
         let char = text.length;
         document.getElementById('char').innerHTML = char;
 
-        text = text.trim();   //remove extra spaces from start & end
+        text = text.trim();          //remove extra spaces from start & end
         let words = text.split(" ");
         let cleanList = words.filter(function (element) {
-            return element != "";          //remove all extra spaces & return clean list
+            return element != "";   //remove all extra spaces & return clean list
         })
         document.getElementById('word').innerHTML = cleanList.length;
     });
