--- a/Wordcounter.html
+++ b/Wordcounter.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div id="color-switcher">
+        <span id="yellowgreen" class="btn" onclick="changeBG('#9acd32')"></span>
+        <span id="aqua" class="btn" onclick="changeBG('#7fffd4')"></span>
+        <span id="violet" class="btn" onclick="changeBG('#ce9aff')"></span>
+        <span id="salmon" class="btn" onclick="changeBG('#fa8072')"></span>
+    </div>
 
     <h1>Word & Character Counter</h1>
     <textarea name="" id="textbox" cols="50" rows="30"></textarea>
